Adding Ubuntu Support

--- a/distro/ubuntu/Dockerfile
+++ b/distro/ubuntu/Dockerfile
@@ -1,5 +1,10 @@
-FROM fedora:latest
+FROM ubuntu:latest
 LABEL authors="sbuglione"
+
+RUN userdel -r ubuntu
+
+# Force all users to use bash as the default shell.
+RUN sed -i 's/\/bin\/sh/\/bin\/bash/g' /etc/passwd
 
 COPY ./config /tmp/config
 
