--- a/distro/ubuntu/config/wsl/wsl-distribution.conf
+++ b/distro/ubuntu/config/wsl/wsl-distribution.conf
@@ -1,12 +1,11 @@
 # /etc/wsl-distribution.conf
-
 [oobe]
-command = /etc/oobe.sh
+command = /usr/lib/wsl/wsl-setup
 defaultUid = 1000
 defaultName = ubuntu-wsl
 
 [shortcut]
-icon = /usr/lib/wsl/ubuntu.ico
+icon = /usr/share/wsl/ubuntu.ico
 
 [windowsterminal]
-ProfileTemplate = /usr/lib/wsl/terminal-profile.json
+ProfileTemplate = /usr/share/wsl/terminal-profile.json
